header, grid layout for main content, placeholder pokemon